# skill-channel-zalo

./: README.md  UPDATE.md  pyproject.toml  skill.yaml
src/skill_channel_zalo_service/: __init__.py  app.py
tests/: test_skill_manifest_exists.py
